tests/neg/i19351.check
-- Error: tests/neg/i19351/A.scala:3:35 --------------------------------------------------------------------------------
3 |  inline def myMacro(): x.type = ${myMacroExpr}  // error
  |                                   ^
  |Cyclic macro dependency; macro refers to a toplevel symbol in tests/neg/i19351/A.scala from which the macro is called
